fix overflow on single file input

--- a/src/assets/css/partials/components/file-input.scss
+++ b/src/assets/css/partials/components/file-input.scss
@@ -60,6 +60,7 @@
                 }
 
                 &-text--filled {
+                    overflow-wrap: anywhere;
                     color: var(--color-gray-900);
                 }
             }
